cabal-version:       >=1.10
name:                chevalier-common
version:             0.2.0
synopsis:            Common types for Chevalier
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental

build-type:          Simple

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Chevalier.Types,
                     Chevalier.Util
  build-depends:     base >=4.7 && <4.8,
                     vaultaire-common,
                     protobuf,
                     text,
                     locators,
                     cereal,
                     bytestring,
                     unordered-containers
