cabal-version:       >=1.10
name:                chevalier-common
version:             0.6.0
synopsis:            Common types for Chevalier
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental

build-type:          Simple

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Chevalier.Types,
                     Chevalier.Util,
                     Chevalier.Client

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=4.7 && <4.8,
                     bifunctors,
                     protobuf,
                     text,
                     locators,
                     cereal,
                     bytestring,
                     unordered-containers,
                     mtl,
                     zeromq4-haskell,
                     vaultaire-common
